// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Korean Live Radio Page A11y I can see the skip to content link 1`] = `"내용 보기"`;

exports[`Canonical Korean Live Radio Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Korean Live Radio Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Korean Live Radio Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "57",
  },
  {
    "p": "korean.bbc_korean_radio.liveradio.page",
  },
  {
    "x1": "[urn:bbc:ares:ws_media:live:bbc_korean_radio]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-korean]",
  },
  {
    "x4": "[ko]",
  },
  {
    "x7": "[player-live]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20코리아%20라디오%20-%20BBC%20News%20코리아]",
  },
]
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, 코리아",
  "url": "/korean",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 2`] = `
{
  "text": "BBC News를 신뢰할 수 있는 이유",
  "url": "https://www.bbc.com/korean/institutional-49283197",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 3`] = `
{
  "text": "이용 약관",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 4`] = `
{
  "text": "BBC 소개",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 5`] = `
{
  "text": "개인정보취급방침",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 6`] = `
{
  "text": "쿠키정책",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 7`] = `
{
  "text": "고객센터",
  "url": "https://www.bbc.co.uk/korean/send/u50853423",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 8`] = `
{
  "text": "다른 언어로 보기",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Korean Live Radio Page Footer Anchors should match text and url 9`] = `
{
  "text": "외부 링크에 대한 본사 정책 보기",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Korean Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/korean"`;

exports[`Canonical Korean Live Radio Page Footer Paragraphs should match text 1`] = `"© 2026 BBC. BBC는 외부 사이트 및 타사 콘텐츠에 대한 책임을 지지 않습니다 외부 링크에 대한 본사 정책 보기"`;

exports[`Canonical Korean Live Radio Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, 코리아",
  "svg": <path
    d="M759.928 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.192a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.267 36.647v-72.699h22.003V265.75h-23.192zM804.187 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.068-35.63-13.23-53.67h24.975a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.771 40.586 3259.894 3259.894 0 0018.881-77.456h22.3a3251.95 3251.95 0 0018.733 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.231 53.67 2041.61 2041.61 0 01-14.57 52.628h-24.233zM1077.47 267.98c-5.848 0-11.62-.645-17.319-1.932a66.227 66.227 0 01-16.428-6.096v-20.516c10.604 6.444 21.854 9.663 33.748 9.663 6.74 0 11.868-1.138 15.387-3.419 3.517-2.28 5.278-5.45 5.278-9.515 0-3.07-.869-5.475-2.602-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.095-2.007-9.663-2.899-5.85-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.299-6.319-3.073-2.427-5.403-5.352-6.987-8.771-1.587-3.42-2.379-7.508-2.379-12.265 0-6.74 1.71-12.537 5.129-17.395 3.42-4.855 8.251-8.597 14.496-11.225 6.244-2.624 13.677-3.939 22.3-3.939 5.65 0 11.199.646 16.65 1.933 5.45 1.289 10.356 3.024 14.72 5.203v20.22c-4.364-2.677-9.293-4.758-14.793-6.245-5.501-1.487-11.028-2.23-16.577-2.23-6.047 0-10.73 1.04-14.05 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.379 6.616 1.584 1.635 3.84 2.973 6.764 4.014 2.923 1.04 6.368 2.058 10.333 3.047 5.055 1.29 9.76 2.702 14.123 4.238 4.36 1.537 8.2 3.493 11.522 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.833 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.203 18.063-3.47 5.006-8.474 8.823-15.016 11.447-6.541 2.626-14.42 3.94-23.638 3.94z"
  />,
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 1`] = `
{
  "text": "뉴스",
  "url": "/korean",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 2`] = `
{
  "text": "국내",
  "url": "/korean/topics/cxnyk3v82rgt",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 3`] = `
{
  "text": "북한",
  "url": "/korean/topics/cg726kygwz9t",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 4`] = `
{
  "text": "세계",
  "url": "/korean/topics/ce71k82r6gzt",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 5`] = `
{
  "text": "건강·과학",
  "url": "/korean/topics/cly27z42zk7t",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 6`] = `
{
  "text": "문화",
  "url": "/korean/topics/c8y946p5qknt",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 7`] = `
{
  "text": "비디오",
  "url": "/korean/topics/cnwng7v0e54t",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 8`] = `
{
  "text": "라디오",
  "url": "/korean/bbc_korean_radio/programmes/w13xttll",
}
`;

exports[`Canonical Korean Live Radio Page Header Navigation link should match text and url 9`] = `
{
  "text": "다운로드",
  "url": "/korean/downloads",
}
`;

exports[`Canonical Korean Live Radio Page Main heading should match text 1`] = `"BBC 코리아 라디오"`;

exports[`Canonical Korean Live Radio Page Media Loader renders a valid container 1`] = `
<figure
  class="media-container bbc-16wwgxo"
  data-e2e="media-loader__container"
>
  <div
    class="media-player bbc-1ty1x88"
    data-e2e="media-player"
  >
    <noscript>
      <div>
        <div
          class="bbc-i4t8f7"
        >
          <strong
            class="bbc-pow7hy"
          >
            사용 기기에서 미디어 재생이 지원되지 않습니다
          </strong>
        </div>
      </div>
    </noscript>
  </div>
</figure>
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/korean/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Korean Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`Canonical Korean Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Korean Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Korean Live Radio Page SEO Heading level 1 1`] = `"BBC 코리아 라디오"`;

exports[`Canonical Korean Live Radio Page SEO Lang attribute 1`] = `"ko"`;

exports[`Canonical Korean Live Radio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ko",
        "name": "Korean",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
        "@type": "WebPage",
        "name": "BBC 코리아 라디오",
      },
      "url": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
    },
  ],
}
`;

exports[`Canonical Korean Live Radio Page SEO OG description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`Canonical Korean Live Radio Page SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/metadata/poster-1024x576.png"`;

exports[`Canonical Korean Live Radio Page SEO OG image alt 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG locale 1`] = `"ko-KO"`;

exports[`Canonical Korean Live Radio Page SEO OG site name 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO OG type 1`] = `"website"`;

exports[`Canonical Korean Live Radio Page SEO OG url 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`Canonical Korean Live Radio Page SEO Page title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Korean Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Korean Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`Canonical Korean Live Radio Page SEO Twitter description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`Canonical Korean Live Radio Page SEO Twitter image alt 1`] = `"BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/metadata/poster-1024x576.png"`;

exports[`Canonical Korean Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`Canonical Korean Live Radio Page SEO Twitter title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`Canonical Korean Live Radio Page Summary should match text 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;
